agregando un lorem

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <h1>
         empezamos a aprender
     </h1>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Non nobis doloremque nemo. Quia tempora nemo nisi sed, 
+        dolore repellendus deleniti, asperiores aspernatur suscipit fuga 
+        quisquam nihil perspiciatis! Earum, 
+        eos quisquam?
+    </p>
 </body>
 </html>
