agregando un comentario

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>
         empezamos a aprender
     </h1>
+    <!-- agregando un comentario -->
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
         Non nobis doloremque nemo. Quia tempora nemo nisi sed, 
