actualizando version el index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Iniciar Sesión 001</h2>
+        <h2>Iniciar Sesión </h2>
         <form id="loginForm" onsubmit="return validateForm()">
             <label for="username">Usuario</label>
             <input type="text" id="username" name="username" required>
