--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Login 001</title>
+    <title>Formulario</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="login-container">
-        <h2>Iniciar Sesión </h2>
+        <h1>Iniciar Sesión </h1>
         <form id="loginForm" onsubmit="return validateForm()">
             <label for="username">Usuario</label>
             <input type="text" id="username" name="username" required>
