modificando el titulo -a

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>Iniciar Sesión </h1>
+        <h1> <b>Iniciar login </b> </h1>
         <form id="loginForm" onsubmit="return validateForm()">
             <label for="username">Usuario</label>
             <input type="text" id="username" name="username" required>
